Begin using Entity framework, change model to include membership type

--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -197,10 +197,28 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803052351492_InitialModel.cs" />
+    <Compile Include="Migrations\201803052351492_InitialModel.Designer.cs">
+      <DependentUpon>201803052351492_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803060020445_AddIsSubscribedToNewsletterCustomer.cs" />
+    <Compile Include="Migrations\201803060020445_AddIsSubscribedToNewsletterCustomer.Designer.cs">
+      <DependentUpon>201803060020445_AddIsSubscribedToNewsletterCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803060026107_AddMembershipType.cs" />
+    <Compile Include="Migrations\201803060026107_AddMembershipType.Designer.cs">
+      <DependentUpon>201803060026107_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803060034077_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201803060034077_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201803060034077_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -284,6 +302,20 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201803052351492_InitialModel.resx">
+      <DependentUpon>201803052351492_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803060020445_AddIsSubscribedToNewsletterCustomer.resx">
+      <DependentUpon>201803060020445_AddIsSubscribedToNewsletterCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803060026107_AddMembershipType.resx">
+      <DependentUpon>201803060026107_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803060034077_PopulateMembershipTypes.resx">
+      <DependentUpon>201803060034077_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
