--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -213,6 +213,10 @@
     <Compile Include="Migrations\201803060034077_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>201803060034077_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803060046362_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201803060046362_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201803060046362_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -315,6 +319,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803060034077_PopulateMembershipTypes.resx">
       <DependentUpon>201803060034077_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803060046362_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201803060046362_ApplyAnnotationsToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
