--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -225,6 +225,14 @@
     <Compile Include="Migrations\201803070140226_UpdateNameValuesInMembershipTypeTable.Designer.cs">
       <DependentUpon>201803070140226_UpdateNameValuesInMembershipTypeTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803070156475_AddBirthdatePropertyToCustomerClass.cs" />
+    <Compile Include="Migrations\201803070156475_AddBirthdatePropertyToCustomerClass.Designer.cs">
+      <DependentUpon>201803070156475_AddBirthdatePropertyToCustomerClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.cs" />
+    <Compile Include="Migrations\201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.Designer.cs">
+      <DependentUpon>201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -336,6 +344,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803070140226_UpdateNameValuesInMembershipTypeTable.resx">
       <DependentUpon>201803070140226_UpdateNameValuesInMembershipTypeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803070156475_AddBirthdatePropertyToCustomerClass.resx">
+      <DependentUpon>201803070156475_AddBirthdatePropertyToCustomerClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.resx">
+      <DependentUpon>201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
