Add Movie DbSet to Context, add movie properties, add Genre class, add migration, update database

--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -233,9 +233,14 @@
     <Compile Include="Migrations\201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.Designer.cs">
       <DependentUpon>201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201803101633571_AddDbSetMoviesToContext.cs" />
+    <Compile Include="Migrations\201803101633571_AddDbSetMoviesToContext.Designer.cs">
+      <DependentUpon>201803101633571_AddDbSetMoviesToContext.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -350,6 +355,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.resx">
       <DependentUpon>201803090017552_ChangeBirthdateTypeToNullableInCustomerClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201803101633571_AddDbSetMoviesToContext.resx">
+      <DependentUpon>201803101633571_AddDbSetMoviesToContext.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
